--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a routerLink="employees" routerLinkActive="active" class="nav-link">Employee List</a>
+        </li>
+    </ul>
+
+</nav>
+
 <h1 class="text-center">{{title}}</h1>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+
+<footer class="footer">
+    <div class="container">
+        <span>Kaizen frente táctico 2022</span>
+    </div>
+</footer>
