--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -2,9 +2,10 @@
 <table class="table table-dark table-striped">
     <thead>
         <tr>
-            <th> First Name</th>
-            <th> Last Name</th>
-            <th> Email</th>
+            <th> First Name </th>
+            <th> Last Name </th>
+            <th> Email </th>
+            <th> Actions </th>
         </tr>
     </thead>
     <tbody>
@@ -12,6 +13,9 @@
             <td>{{employee.firstName}}</td>
             <td>{{employee.lastName}}</td>
             <td>{{employee.email}}</td>
+            <td>
+                <button (click)="updateEmployee(employee.id)" class="btn btn-info"> Update </button>
+            </td>
         </tr>
     </tbody>
 </table>
